# diff-match-patch

./: .travis.yml  README.rst  diff-match-patch.cabal
app/: Main.hs
src/: Lib.hs
src/Data/: DiffMatchPatch.hs
src/Data/DiffMatchPatch/: Internal.hs
test/: Spec.hs
